tests/baselines/reference/optionalProperty(strict=true).errors.txt
optionalProperty.ts(2,5): error TS7008: Member 'prop' implicitly has an 'any' type.


==== optionalProperty.ts (1 errors) ====
    class C {
        prop?;
        ~~~~
!!! error TS7008: Member 'prop' implicitly has an 'any' type.
    }
    